Update 0.basic JavaScript questions.md

--- a/JS/0.basic JavaScript questions.md
+++ b/JS/0.basic JavaScript questions.md
@@ -123,4 +123,6 @@ Certainly! Here are a few more advanced JavaScript architecture questions:
    - It emphasizes building a rich and expressive domain model and designing software around the business concepts, rules, and workflows.
    - In JavaScript application architecture, DDD promotes a modular and organized structure, aligning code with business requirements and improving maintainability.
 
-These advanced JavaScript architecture questions touch on event-driven architecture, reactive programming, database design considerations, caching strategies, and domain-driven design. Understanding these concepts will help you design and build robust, scalable, and high-performing JavaScript applications.
+
+Authentication vs authorization
+   - Authentication is the process of verifying a user's identity, while authorization determines the actions and resources a user is allowed to access based on their authenticated identity.
