--- a/angular/0.Good Questions.md
+++ b/angular/0.Good Questions.md
@@ -5,11 +5,10 @@
 -   **Components**: A component can control numerous views wherein each of the views is a particular part on the screen. All Angular applications have a minimum of one component called the root component. This component is bootstrapped in the root module, the main module. All the components include the logic of the application that is defined in a class, while the main role of the class is to interact with the view using an API of functions and properties.
 -   **Data binding**: Data binding is the process in which the various sections of a template interact with the component. The binding markup needs to be added to the HTML template so that Angular can understand how it can connect with the component and template.
 -   **Dependency injection**: It uses DI so that it can offer the necessary dependencies: mainly services, to the new components. The constructor parameters of a component inform Angular regarding the numerous services needed by the component, and DI provides a solution that gives the necessary dependencies to the new class instances.
--   [**Directives**](https://intellipaat.com/blog/tutorial/angularjs-tutorial/angularjs-directives/): Angular templates are of a dynamic nature, and directives help Angular understand how it can transform the DOM while manifesting the template.
+-   **Directives**: Angular templates are of a dynamic nature, and directives help Angular understand how it can transform the DOM while manifesting the template.
 -   **Metadata**: Classes have metadata attached to them with the help of decorators so that Angular will have an idea of processing the class.
--   **[Modules](https://intellipaat.com/blog/tutorial/angularjs-tutorial/angularjs-modules/):**  Module or NgModule is a block of code organized using the necessary capabilities set, having one specific workflow. All Angular applications have at least one module, the root module, and most of the applications have numerous modules.
+-  **Modules** : Module or NgModule is a block of code organized using the necessary capabilities set, having one specific workflow. All Angular applications have at least one module, the root module, and most of the applications have numerous modules.
 -   **Routing**: The Angular router helps interpret the URL of a browser to get a client-generated experience and view. This router is bound to page links so that Angular can go to the application view as soon as the user clicks on it.
-
 -   **Services**: Service is a vast category that ranges from functions and values to features that play a significant role in Angular applications.
 -   **Template**: The view of each component is linked with a template, and an Angular template is a type of HTML tag that allows Angular to get an idea of how it needs to render the component.
 
