--- a/JS/v8.md
+++ b/JS/v8.md
@@ -1,3 +1,6 @@
+![enter image description here](https://raw.githubusercontent.com/lmadhuranga/iq/main/v8-priority.gif)
+
+
 In V8 (the JavaScript engine used by Google Chrome and Node.js), the event loop follows a specific order of execution for tasks in the queue. The order of execution is as follows:
 
 1. **Synchronous Tasks:**
